syntax = "proto3";

package ollo.farming.v1;

import "ollo/farming/v1/farming.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "ollo/farming/v1/params.proto";
import "google/api/annotations.proto";

option go_package = "ollo/x/farming/types";

// Query defines the gRPC query service for the farming module.
service Query {
  // Params returns parameters of the farming module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ollo/farming/v1/params";
  }

  // Plans returns all plans.
  rpc Plans(QueryPlansRequest) returns (QueryPlansResponse) {
    option (google.api.http).get = "/ollo/farming/v1/plans";
  }

  // Plan returns a specific plan.
  rpc Plan(QueryPlanRequest) returns (QueryPlanResponse) {
    option (google.api.http).get = "/ollo/farming/v1/plans/{plan_id}";
  }

  // Stakings returns all stakings by a farmer.
  rpc Stakings(QueryStakingsRequest) returns (QueryStakingsResponse) {
    option (google.api.http).get  = "/ollo/farming/v1/stakings/{farmer}";
  }

  // TotalStakings returns total staking amount for a staking coin denom
  rpc TotalStakings(QueryTotalStakingsRequest) 
  returns (QueryTotalStakingsResponse) {
    option (google.api.http).get = "/ollo/farming/v1/total_stakings/{staking_coin_denom}";
  }

  // Rewards returns rewards for a farmer
  rpc Rewards(QueryRewardsRequest) returns (QueryRewardsResponse) {
    option (google.api.http).get  = "/ollo/farming/v1/rewards/{farmer}";
  }

  // CurrentEpochDays returns current epoch days.
  rpc CurrentEpochDays(QueryCurrentEpochDaysRequest) 
  returns (QueryCurrentEpochDaysResponse) {
    option (google.api.http).get  = "/ollo/farming/v1/current_epoch_days";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryPlansRequest is the request type for the Query/Plans RPC method.
message QueryPlansRequest {
  string type                 = 1;
  string farming_pool_address = 2;
  string termination_address  = 3;
  string staking_coin_denom   = 4;
  string terminated           = 5;
  cosmos.base.query.v1beta1.PageRequest pagination           = 6;
}

// QueryPlansResponse is the response type for the Query/Plans RPC method.
message QueryPlansResponse {
  // plans are the existing plans
  repeated google.protobuf.Any plans = 1 [(cosmos_proto.accepts_interface) = "PlanI"];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryPlanRequest is the request type for the Query/Plan RPC method.
message QueryPlanRequest {
  uint64 plan_id = 1;
}

// QueryPlanResponse is the response type for the Query/Plan RPC method.
message QueryPlanResponse {
  google.protobuf.Any plan = 1 [(cosmos_proto.accepts_interface) = "PlanI"];
}

// QueryStakingsRequest is the request type for the Query/Stakings RPC method.
message QueryStakingsRequest {
  string farmer             = 1;
  string staking_coin_denom = 2;
}

// QueryStakingsResponse is the response type for the Query/Stakings RPC method.
message QueryStakingsResponse {
  repeated cosmos.base.v1beta1.Coin staked_coins = 1
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin queued_coins = 2
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
}

// QueryTotalStakingsRequest is the request type for the Query/TotalStakings RPC method.
message QueryTotalStakingsRequest {
  string staking_coin_denom = 1;
}

// QueryTotalStakingsResponse is the response type for the Query/TotalStakings RPC method.
message QueryTotalStakingsResponse {
  string amount = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

// QueryRewardsRequest is the request type for the Query/Rewards RPC method.
message QueryRewardsRequest {
  string farmer             = 1;
  string staking_coin_denom = 2;
}

// QueryRewardsResponse is the response type for the Query/Rewards RPC method.
message QueryRewardsResponse {
  repeated cosmos.base.v1beta1.Coin rewards = 1
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
}

// QueryCurrentEpochDaysRequest is the request type for the Query/CurrentEpochDays RPC method.
message QueryCurrentEpochDaysRequest {}

// QuerCurrentEpochDaysResponse is the response type for the Query/CurrentEpochDays RPC method.
message QueryCurrentEpochDaysResponse {
  uint32 current_epoch_days = 1;
}
