syntax = "proto3";
package ollo.ons;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "ollo/x/ons/types";

// Msg defines the Msg service.
service Msg {
      rpc BuyName(MsgBuyName) returns (MsgBuyNameResponse);
  rpc SetName(MsgSetName) returns (MsgSetNameResponse);
  rpc DeleteName(MsgDeleteName) returns (MsgDeleteNameResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgBuyName {
  string creator = 1;
  string name = 2;
  string bid = 3;
}

message MsgBuyNameResponse {
}

message MsgSetName {
  string creator = 1;
  string name = 2;
  string value = 3;
}

message MsgSetNameResponse {
}

message MsgDeleteName {
  string creator = 1;
  string name = 2;
}

message MsgDeleteNameResponse {
}

// this line is used by starport scaffolding # proto/tx/message
